Improved handling of z-index, corrected an issue that caused the body-shadow to not show up, and got the src-defer script loading with problems

--- a/packages/styles/src/_engrid-background-image.scss
+++ b/packages/styles/src/_engrid-background-image.scss
@@ -5,7 +5,6 @@ body[data-engrid-backgroundImage="set"]{
   .page-backgroundImage{
     overflow: hidden; // added for before pseudo-element to help improve page redraw and subsequent page scroll FPS
     position: relative; // added for before pseudo-element to help improve page redraw and subsequent page scroll FPS
-    z-index: -3;
 
     &:before {
       content: ' ';
@@ -58,16 +57,11 @@ body[data-engrid-backgroundImage="set"]{
       background-position: top left;
     }
   }     
-
-  .page-backgroundImageOverlay {
-    z-index: -1;
-  }
 }
 
 body{
 
   .page-backgroundImage{
-    z-index: -3;
 
      /* Style the video: 100% width and height to cover the entire window */
      video {
