--- a/packages/styles/src/_engrid-fields.scss
+++ b/packages/styles/src/_engrid-fields.scss
@@ -359,14 +359,14 @@
   // }
   select {
     width: 80px;
-    z-index: 1;
+    // z-index: 1;
     background-color: transparent;
     -webkit-box-shadow: none;
     box-shadow: none;
     text-align-last: right;
   }
   .en__field__error {
-    z-index: 1;
+    // z-index: 1;
   }
 }
 
